--- a/templates/404.html
+++ b/templates/404.html
@@ -49,42 +49,12 @@
         #content {
             font-family: 'VT323', monospace;
             color: rgb(159, 248, 25);
-            font-size: 24px;
+            font-size: 32px;
             text-shadow: 2px 2px 4px rgb(100, 150, 100), 0 0 2em rgb(100, 150, 100), 0 0 0.3em rgb(100, 150, 100);
             position: relative;
             z-index: 1;
             text-align: center;
         }
-        input, select, button {
-            font-family: 'VT323', monospace;
-            font-size: 20px;
-            padding: 10px;
-            margin: 10px;
-            background: black;
-            color: rgb(159, 248, 25);
-            border: 2px solid rgb(159, 248, 25);
-            outline: none;
-        }
-        button {
-            cursor: pointer;
-        }
-        #ascii-output {
-            margin-top: 20px;
-            white-space: pre;
-            font-size: 16px; 
-            overflow: auto;
-            max-height: 300px;
-            border: 2px solid rgb(159, 248, 25);
-            padding: 10px;
-            width: 95%;
-            text-align: center;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-left:30px;
-        }
-
-
     </style>
 </head>
 <body>
@@ -93,21 +63,8 @@
         <img src="/static/images/bezel.png" id="bezel">
         
         <div id="content">
-            <h1>ASCII ART Web</h1>
-
-            <form id="ascii-form">
-                <input type="text" id="text-input" placeholder="Enter text..." required>
-                
-                <select id="banner-select">
-                    <option value="standard">Standard</option>
-                    <option value="shadow">Shadow</option>
-                    <option value="thinkertoy">Thinkertoy</option>
-                </select>
-                
-                <button type="submit">Generate</button>
-            </form>
-
-            <pre id="ascii-output"></pre>
+            <h1>404</h1>
+            <h2>NOT FOUND</h2>
         </div>
     </div>
 
