--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,15 @@
             align-items: center;
             margin-left:30px;
         }
+        #authors {
+            position: absolute;
+            bottom: 100px;
+            right: 150px;
+            font-size: 14px;
+            color: rgb(159, 248, 25);
+            font-family: 'VT323', monospace;
+            text-shadow: 1px 1px 3px rgb(100, 150, 100);
+        }
 
 
     </style>
@@ -109,6 +118,10 @@
 
             <pre id="ascii-output"></pre>
         </div>
+
+        <div id="authors">Created by: Amangeldykyzy Damilya, Temirkhanov Tamerlan, Kabdylqaq Arnur
+        </div>
+
     </div>
 
     <script>
