feat: with reset button

--- a/templates/index.html
+++ b/templates/index.html
@@ -115,7 +115,7 @@
           <option value="shadow">Shadow</option>
           <option value="thinkertoy">Thinkertoy</option>
         </select>
-        <button type="submit">Generate</button>
+        <button type="submit">Reset</button>
       </form>
       <pre id="ascii-output"></pre>
     </div>
