--- a/templates/index.html
+++ b/templates/index.html
@@ -77,20 +77,25 @@
       gap: 10px;
     }
     #ascii-output {
-      margin-top: 20px;
-      white-space: pre;
-      font-size: 16px;
-      max-height: 600px;
-      border: 2px solid rgb(159, 248, 25);
-      padding: 10px 20px;
-      width: 95%;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-left: 30px;
-      overflow-y: auto; 
-    }
+  margin-top: 20px;
+  white-space: pre;
+  font-size: 14px; 
+  max-height: 700px; 
+  max-width: 1600px; 
+  border: 2px solid rgb(159, 248, 25);
+  border-radius: 20px;;
+  padding: 10px 20px;
+  text-align: left; 
+  display: flex;
+  justify-content: flex-start; 
+  align-items: flex-start;
+  margin-left: 30px;
+  overflow-y: auto;
+  overflow-x: auto; 
+  margin-bottom: 80px;
+}
+
+
 
     #authors {
       position: absolute;
