--- a/templates/500.html
+++ b/templates/500.html
@@ -64,7 +64,7 @@
         
         <div id="content">
             <h1>500</h1>
-            <h2>INTERNAL SERVER ERROR</h2>
+            <h2>INTERNAL SERVER ERROR!</h2>
         </div>
     </div>
 
